# github-stats-cli

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  REPO_SETUP_SPEC.md  pyproject.toml  requirements.txt
.claude/: settings.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
github_stats/: __init__.py  __main__.py  auth.py  cli.py  display.py  output.py
github_stats/metrics/: __init__.py  base.py  commits.py  followers.py  issues.py  pull_requests.py  stars.py
tests/: __init__.py  conftest.py  test_auth.py  test_cli.py  test_metrics.py
