[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-stats-cli"
version = "0.1.0"
description = "A beautiful CLI for GitHub profile statistics"
requires-python = ">=3.8"
dependencies = [
    "PyGithub>=2.1.1",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
github-stats = "github_stats.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "F401",  # unused imports (some are intentional for re-export)
    "F841",  # unused variables (some are for clarity)
    "B018",  # useless expression (used for API validation)
    "B007",  # unused loop variable
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
